--- a/examples/blog-starter/package.json
+++ b/examples/blog-starter/package.json
@@ -8,10 +8,11 @@
   "dependencies": {
     "classnames": "^2.5.1",
     "date-fns": "^3.3.1",
+    "eslint-config-next": "^14.2.2",
     "gray-matter": "^4.0.3",
-    "next": "14.1.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1"
   },
